Cotroller migration for AdminCtrl